[gd_scene load_steps=25 format=3 uid="uid://b84r6rjkd1pyw"]

[ext_resource type="Script" uid="uid://cq31d5nhyx4i0" path="res://scripts/characters/skeleton.gd" id="1_bf3q5"]
[ext_resource type="Texture2D" uid="uid://cwq6vkl6mhn1d" path="res://art/characters/skelly.png" id="2_34pwv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bf3q5"]
atlas = ExtResource("2_34pwv")
region = Rect2(0, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_34pwv"]
atlas = ExtResource("2_34pwv")
region = Rect2(16, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgxng"]
atlas = ExtResource("2_34pwv")
region = Rect2(32, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e51g4"]
atlas = ExtResource("2_34pwv")
region = Rect2(48, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpes4"]
atlas = ExtResource("2_34pwv")
region = Rect2(0, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqh4s"]
atlas = ExtResource("2_34pwv")
region = Rect2(16, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4iwqf"]
atlas = ExtResource("2_34pwv")
region = Rect2(32, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_62pey"]
atlas = ExtResource("2_34pwv")
region = Rect2(48, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_48r2k"]
atlas = ExtResource("2_34pwv")
region = Rect2(0, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxfty"]
atlas = ExtResource("2_34pwv")
region = Rect2(0, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s57q6"]
atlas = ExtResource("2_34pwv")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqcih"]
atlas = ExtResource("2_34pwv")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpthv"]
atlas = ExtResource("2_34pwv")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8f6t6"]
atlas = ExtResource("2_34pwv")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajnta"]
atlas = ExtResource("2_34pwv")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_56epf"]
atlas = ExtResource("2_34pwv")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hy3de"]
atlas = ExtResource("2_34pwv")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_csadg"]
atlas = ExtResource("2_34pwv")
region = Rect2(48, 64, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_gmnt8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bf3q5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34pwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgxng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e51g4")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpes4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqh4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4iwqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62pey")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_48r2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxfty")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s57q6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqcih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpthv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8f6t6")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajnta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56epf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hy3de")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_csadg")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_coxve"]
radius = 47.0106

[sub_resource type="CircleShape2D" id="CircleShape2D_t40wr"]
radius = 8.06226

[sub_resource type="CircleShape2D" id="CircleShape2D_cpx6o"]
radius = 16.0

[node name="skeleton" type="CharacterBody2D"]
script = ExtResource("1_bf3q5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_gmnt8")
animation = &"attack"
offset = Vector2(0, -6)

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_coxve")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_t40wr")

[node name="enemy_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_cpx6o")

[node name="take_damage_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(0.207843, 0.811765, 0.207843, 1)
offset_left = -6.0
offset_top = 4.0
offset_right = 114.0
offset_bottom = 31.0
scale = Vector2(0.1, 0.1)
max_value = 200.0
show_percentage = false

[node name="AttackCooldownTimer" type="Timer" parent="."]

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_attack_cooldown_timer_timeout"]
